[package]
name = "feaule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
regex = "1.8"
lazy_static = "1.0"
smallvec = { version = "1.10", features = [
    "write",
    "union",
    "const_generics",
    "const_new",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
crossterm = "0.27"
thiserror = "1.0"
